--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/EJBelford/watchit#readme",
   "dependencies": {
     "caporal": "^1.4.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "lodash.debounce": "^4.0.8"
   }
